tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__Wireless20-AAAAAAAAAAAAAAAAAAAJ7g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2542,
  "prerequisites": [
    1300,
    2535
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This is the good wireless terminal. It allows you to combine 6 different types of terminals into one ultimate terminal for usage on the go; Crafting, Patterning, Fluid, Essentia, Interface, & Level Emitter.\n\nIf you make the full version, it even allows you to program large fluid processing patterns without needing LuV parts to make the terminal first.\n\n[note]Recommended to set a keybind for this so you don't need to keep it in your hotbar.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Wireless 2.0",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1300,
    2535
  ],
  "rewards": [],
  "tasks": []
}
