tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__WirelessHUBs-tM8pT_W3RCqZNDAovERxFg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 17705695410368311574,
  "prerequisites": [
    1329,
    1493
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Wireless Connector also has a HUB upgrade! These Wireless HUBs can be linked to many wireless connectors at once so you won't need to spam a chunk of 1:1 connectors into one spot. Keep in mind there is still a 32 channel limitation.\n\n[note]Great for placing on controller faces![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Wireless HUBs",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1329,
    1493
  ],
  "rewards": [],
  "tasks": []
}
