tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__WirelessSetup-AAAAAAAAAAAAAAAAAAAFEg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1298,
  "prerequisites": [
    1292
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Allows you to configure which users, and what permissions the users have with the ME System. By existing it enforces permissions on the usage of the system.\n\nThe security system does not prevent destructive tampering, removing cables / machines or breaking of drives. If you need to protect your system from physical vandalism you will need another form of physical security. This block provides network level security.\n\nThe player who places the ME security terminal has full control over the network and cannot exclude themselves any rights. By adding a blank biometric card you define a default behavior for every player who has no biometric card registered.\n\nIn addition to security on the software layer, you can link up your wireless terminal with the network and access it wirelessly.\n\nIf you have one on your main network, your subnets may also need one to have access to your main network, but this is not always the case depending on how you set it up.\n\nThe ME Wireless Access Point wireless access via a wireless terminal. Range and power usage is determined based on the number of wireless boosters installed into the ME wireless access point. A network can have any number of ME wireless access points with any number of wireless boosters in each one, allowing you to optimize power usage and range by altering your setup.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Wireless Setup",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1292
  ],
  "rewards": [],
  "tasks": []
}
